--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@ ghost.init({
         <nav class="site-nav">
     <div class="site-nav-left">
             <ul class="nav" role="menu">
-    <li class="nav-home" role="menuitem"><a href="http://localhost:2369">Home</a></li>
-    <li class="nav-sobre" role="menuitem"><a href="http://localhost:2369/sobre">Sobre</a></li>
-    <li class="nav-projetos" role="menuitem"><a href="http://localhost:2369/projetos">Projetos</a></li>
-    <li class="nav-contato" role="menuitem"><a href="http://localhost:2369/contato">Contato</a></li>
+    <li class="nav-home" role="menuitem"><a href="http://www.coisadeprogramador.com.br/">Home</a></li>
+    <li class="nav-sobre" role="menuitem"><a href="http://www.coisadeprogramador.com.br/sobre/">Sobre</a></li>
+    <li class="nav-projetos" role="menuitem"><a href="http://www.coisadeprogramador.com.br/projetos/">Projetos</a></li>
+    <li class="nav-contato" role="menuitem"><a href="http://www.coisadeprogramador.com.br/contato">Contato</a></li>
 </ul>
 
     </div>
