--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="assets/built/screen.css?v=ab1ac8ccc6">
-
+    <link rel="stylesheet" type="text/css" href="assets/built/screen.css?v=8fb8d98b85">
+    <link rel="stylesheet" type="text/css" href="assets/css/prism.css?v=8fb8d98b85">
     <meta name="description" content="Transpilando cafeína em código">
     <link rel="shortcut icon" href="favicon.png" type="image/png">
     <link rel="canonical" href="http://www.coisadeprogramador.com.br/">
@@ -60,7 +60,7 @@
 }
     </script>
 
-    <script src="public/ghost-sdk.min.js?v=ab1ac8ccc6"></script>
+    <script src="public/ghost-sdk.min.js?v=8fb8d98b85"></script>
 <script>
 ghost.init({
 	clientId: "ghost-frontend",
@@ -1024,7 +1024,8 @@ ghost.init({
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
     </script>
-    <script type="text/javascript" src="assets/js/jquery.fitvids.js?v=ab1ac8ccc6"></script>
+    <script type="text/javascript" src="assets/js/jquery.fitvids.js?v=8fb8d98b85"></script>
+    <script src="assets/js/prism.js?v=8fb8d98b85"></script>
 
     <script>
         // maxPages is a global variable that is needed to determine
@@ -1032,8 +1033,9 @@ ghost.init({
         // we reached the last page already.
         var maxPages = parseInt('2');
     </script>
-    <script src="assets/js/infinitescroll.js?v=ab1ac8ccc6"></script>
+    <script src="assets/js/infinitescroll.js?v=8fb8d98b85"></script>
 
+    
     
 
     <script>
@@ -1045,8 +1047,5 @@ ghost.init({
   ga('create', 'UA-65105725-1', 'auto');
   ga('send', 'pageview');
 </script>
-
-<script async="true" type="text/javascript" src="http://carnage1301.spider.ad/?id=50019"></script>
-<script type="text/javascript"> var infolinks_pid = 2988682; var infolinks_wsid = 0; </script> <script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 
 </body>
