--- a/instalando-o-android-studio-via-ubuntu-make/index.html
+++ b/instalando-o-android-studio-via-ubuntu-make/index.html
@@ -8,8 +8,8 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="../assets/built/screen.css?v=a4c5a7031b">
-    <link rel="stylesheet" type="text/css" href="../assets/css/prism.css?v=a4c5a7031b">
+    <link rel="stylesheet" type="text/css" href="../assets/built/screen.css?v=3651d5f901">
+    <link rel="stylesheet" type="text/css" href="../assets/css/prism.css?v=3651d5f901">
     <meta name="description" content="O ubuntu make possibilita a instalação das plataformas dev, Android Studio, Eclipse, NetBeans, Visual Studio Code, WebStorm, PyCharm entre outros.">
     <link rel="shortcut icon" href="../favicon.png" type="image/png">
     <link rel="canonical" href="http://www.coisadeprogramador.com.br/instalando-o-android-studio-via-ubuntu-make/">
@@ -85,7 +85,7 @@
 }
     </script>
 
-    <script src="../public/ghost-sdk.min.js?v=a4c5a7031b"></script>
+    <script src="../public/ghost-sdk.min.js?v=3651d5f901"></script>
 <script>
 ghost.init({
 	clientId: "ghost-frontend",
@@ -319,12 +319,13 @@ sudo apt-get autoremove
 </div>
                     <div class="read-next-card-content">
                         <ul>
+                            <li><a href="../corre-cao-meu-primeiro-jogo-android-para-criancas/">Corre, cão! Meu primeiro jogo Android para crianças</a></li>
                             <li><a href="../aplicativo-hibrido-nativo-eis-a-questao/">Aplicativo híbrido ou nativo? Eis a questão</a></li>
                             <li><a href="../genymotion-o-emulador-android-rapido-e-eficiente/">Genymotion, o emulador android rápido e eficiente</a></li>
                         </ul>
                     </div>
                     <footer class="read-next-card-footer">
-                        <a href="../tag/android/">See all 2 posts →</a>
+                        <a href="../tag/android/">See all 3 posts →</a>
                     </footer>
                 </article>
 
@@ -457,8 +458,8 @@ sudo apt-get autoremove
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
     </script>
-    <script type="text/javascript" src="../assets/js/jquery.fitvids.js?v=a4c5a7031b"></script>
-    <script src="../assets/js/prism.js?v=a4c5a7031b"></script>
+    <script type="text/javascript" src="../assets/js/jquery.fitvids.js?v=3651d5f901"></script>
+    <script src="../assets/js/prism.js?v=3651d5f901"></script>
 
 
     <script>
