--- a/merge-de-objetos-em-javascript-jquery-es6/index.html
+++ b/merge-de-objetos-em-javascript-jquery-es6/index.html
@@ -8,8 +8,8 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="../assets/built/screen.css?v=a4c5a7031b">
-    <link rel="stylesheet" type="text/css" href="../assets/css/prism.css?v=a4c5a7031b">
+    <link rel="stylesheet" type="text/css" href="../assets/built/screen.css?v=3651d5f901">
+    <link rel="stylesheet" type="text/css" href="../assets/css/prism.css?v=3651d5f901">
     <meta name="description" content="Este artigo aborda o merge ou concatenação de objetos em JavaScript. Esta técnica pode ser aplicada com o jQuery ($.extend) ou ES6 (Object.Assign).">
     <link rel="shortcut icon" href="../favicon.png" type="image/png">
     <link rel="canonical" href="http://www.coisadeprogramador.com.br/merge-de-objetos-em-javascript-jquery-es6/">
@@ -84,7 +84,7 @@
 }
     </script>
 
-    <script src="../public/ghost-sdk.min.js?v=a4c5a7031b"></script>
+    <script src="../public/ghost-sdk.min.js?v=3651d5f901"></script>
 <script>
 ghost.init({
 	clientId: "ghost-frontend",
@@ -380,13 +380,13 @@ var lionFalcon = new LionFalcon();
 </div>
                     <div class="read-next-card-content">
                         <ul>
+                            <li><a href="../corre-cao-meu-primeiro-jogo-android-para-criancas/">Corre, cão! Meu primeiro jogo Android para crianças</a></li>
                             <li><a href="../javascript-as-diferencas-entre-os-metodos-call-e-apply/">JavaScript: As diferenças entre os métodos Call e Apply</a></li>
                             <li><a href="../introducao-ao-webpack-o-flexivel-module-bundler-typescript/">Introdução ao webpack o flexível module bundler com TypeScript</a></li>
-                            <li><a href="../mantendo-contexto-callbacks-javascript-metodo-bind/">Mantendo contexto em callbacks JavaScript com o método bind</a></li>
                         </ul>
                     </div>
                     <footer class="read-next-card-footer">
-                        <a href="../tag/javascript/">See all 3 posts →</a>
+                        <a href="../tag/javascript/">See all 4 posts →</a>
                     </footer>
                 </article>
 
@@ -520,8 +520,8 @@ var lionFalcon = new LionFalcon();
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
     </script>
-    <script type="text/javascript" src="../assets/js/jquery.fitvids.js?v=a4c5a7031b"></script>
-    <script src="../assets/js/prism.js?v=a4c5a7031b"></script>
+    <script type="text/javascript" src="../assets/js/jquery.fitvids.js?v=3651d5f901"></script>
+    <script src="../assets/js/prism.js?v=3651d5f901"></script>
 
 
     <script>
