--- a/como-criar-projeto-rest-net-web-api-vnext-persistencia-dados/index.html
+++ b/como-criar-projeto-rest-net-web-api-vnext-persistencia-dados/index.html
@@ -140,10 +140,10 @@ ghost.init({
     <div class="site-nav-left">
                 <a class="site-nav-logo" href="https://www.coisadeprogramador.com.br"><img src="../content/images/2018/09/logo_600.png" alt="Coisa de Programador"></a>
             <ul class="nav" role="menu">
-    <li class="nav-home" role="menuitem"><a href="http://www.coisadeprogramador.com.br/">Home</a></li>
+    <li class="nav-home" role="menuitem"><a href="https://www.coisadeprogramador.com.br/">Home</a></li>
     <li class="nav-sobre" role="menuitem"><a href="https://www.coisadeprogramador.com.br/sobre/">Sobre</a></li>
-    <li class="nav-projetos" role="menuitem"><a href="http://www.coisadeprogramador.com.br/meus-projetos">Projetos</a></li>
-    <li class="nav-contato" role="menuitem"><a href="http://www.coisadeprogramador.com.br/contato">Contato</a></li>
+    <li class="nav-projetos" role="menuitem"><a href="https://www.coisadeprogramador.com.br/meus-projetos">Projetos</a></li>
+    <li class="nav-contato" role="menuitem"><a href="https://www.coisadeprogramador.com.br/contato">Contato</a></li>
 </ul>
 
     </div>
@@ -185,11 +185,11 @@ ghost.init({
 <p>Este projeto será criado em Linux numa distribuição <em>(Ubuntu/Debian)</em> e claro por ser <em>Cross-Platform</em> poderá ser portada para o <em>Windows e OSX</em>, a execução do projeto é controlada pelo DNVM (.NET Version Manager).</p>
 <p><strong>Recomendo a leitura do primeiro artigo relacionado ao vNext</strong></p>
 <ul>
-<li><a href="http://www.coisadeprogramador.com.br/como-instalar-o-asp-net-vnext-no-ubuntu/">Primeiros Passos vNext</a></li>
+<li><a href="https://www.coisadeprogramador.com.br/como-instalar-o-asp-net-vnext-no-ubuntu/">Primeiros Passos vNext</a></li>
 </ul>
 <p>Será necessário a instalação do <strong><a href="http://yeoman.io/">Yeoman</a></strong>, pois serão utilizados <em>scaffolding</em> para facilitar nosso trabalho de configuração da estrutura do projeto, segue outro artigo de introdução.</p>
 <ul>
-<li><a href="http://www.coisadeprogramador.com.br/yeoman-facilitando-a-preparacao-do-ambiente-de-desenvolvimento/">Introdução Yeoman</a></li>
+<li><a href="https://www.coisadeprogramador.com.br/yeoman-facilitando-a-preparacao-do-ambiente-de-desenvolvimento/">Introdução Yeoman</a></li>
 </ul>
 <h2 id="vamoscomear">Vamos começar ?</h2>
 <p>Primeiramente instale o gerador de <code>scaffolding</code> <strong><a href="https://github.com/omnisharp/generator-aspnet">OminiSharp</a></strong> de maneira global, inserindo o comando abaixo em sua linha de comando.</p>
