--- a/executando-o-asp-net-core-em-um-docker-container/index.html
+++ b/executando-o-asp-net-core-em-um-docker-container/index.html
@@ -139,10 +139,10 @@ ghost.init({
     <div class="site-nav-left">
                 <a class="site-nav-logo" href="https://www.coisadeprogramador.com.br"><img src="../content/images/2018/09/logo_600.png" alt="Coisa de Programador"></a>
             <ul class="nav" role="menu">
-    <li class="nav-home" role="menuitem"><a href="http://www.coisadeprogramador.com.br/">Home</a></li>
+    <li class="nav-home" role="menuitem"><a href="https://www.coisadeprogramador.com.br/">Home</a></li>
     <li class="nav-sobre" role="menuitem"><a href="https://www.coisadeprogramador.com.br/sobre/">Sobre</a></li>
-    <li class="nav-projetos" role="menuitem"><a href="http://www.coisadeprogramador.com.br/meus-projetos">Projetos</a></li>
-    <li class="nav-contato" role="menuitem"><a href="http://www.coisadeprogramador.com.br/contato">Contato</a></li>
+    <li class="nav-projetos" role="menuitem"><a href="https://www.coisadeprogramador.com.br/meus-projetos">Projetos</a></li>
+    <li class="nav-contato" role="menuitem"><a href="https://www.coisadeprogramador.com.br/contato">Contato</a></li>
 </ul>
 
     </div>
@@ -185,7 +185,7 @@ ghost.init({
 <h2 id="jconfigurouodocker">Já configurou o Docker?</h2>
 <p>Bom se você ainda não configurou o Docker em sua estação de trabalho veja este artigo de introdução:</p>
 <ul>
-<li><strong><a href="http://www.coisadeprogramador.com.br/criando-sua-primeiro-docker-container/">Criando seu primeiro Docker Container</a></strong></li>
+<li><strong><a href="https://www.coisadeprogramador.com.br/criando-sua-primeiro-docker-container/">Criando seu primeiro Docker Container</a></strong></li>
 </ul>
 <h2 id="instalandoonetcore">Instalando o .NET Core</h2>
 <p>Para instalar siga as instruções deste site abaixo:</p>
