--- a/gulp-automatize-facilmente-suas-tarefas/index.html
+++ b/gulp-automatize-facilmente-suas-tarefas/index.html
@@ -140,10 +140,10 @@ ghost.init({
     <div class="site-nav-left">
                 <a class="site-nav-logo" href="https://www.coisadeprogramador.com.br"><img src="../content/images/2018/09/logo_600.png" alt="Coisa de Programador"></a>
             <ul class="nav" role="menu">
-    <li class="nav-home" role="menuitem"><a href="http://www.coisadeprogramador.com.br/">Home</a></li>
+    <li class="nav-home" role="menuitem"><a href="https://www.coisadeprogramador.com.br/">Home</a></li>
     <li class="nav-sobre" role="menuitem"><a href="https://www.coisadeprogramador.com.br/sobre/">Sobre</a></li>
-    <li class="nav-projetos" role="menuitem"><a href="http://www.coisadeprogramador.com.br/meus-projetos">Projetos</a></li>
-    <li class="nav-contato" role="menuitem"><a href="http://www.coisadeprogramador.com.br/contato">Contato</a></li>
+    <li class="nav-projetos" role="menuitem"><a href="https://www.coisadeprogramador.com.br/meus-projetos">Projetos</a></li>
+    <li class="nav-contato" role="menuitem"><a href="https://www.coisadeprogramador.com.br/contato">Contato</a></li>
 </ul>
 
     </div>
@@ -217,7 +217,7 @@ ghost.init({
 <h2 id="prontoparaautomatizar">Pronto para automatizar ?</h2>
 <p><img src="../content/images/2015/08/FWcoE5AkG3BRe.gif" alt="Vamos!"></p>
 <p>Crie uma pasta para este projeto e inicialize seu projeto:</p>
-<p><em>Caso não esteja familiarizado com o NodeJs, recomendo que leia este <a href="http://www.coisadeprogramador.com.br/nodejs-primeiros-passos/">tutorial</a></em></p>
+<p><em>Caso não esteja familiarizado com o NodeJs, recomendo que leia este <a href="https://www.coisadeprogramador.com.br/nodejs-primeiros-passos/">tutorial</a></em></p>
 <pre><code>npm init
 npm install --save-dev gulp
 </code></pre>
