--- a/introducao-ao-webpack-o-flexivel-module-bundler-typescript/index.html
+++ b/introducao-ao-webpack-o-flexivel-module-bundler-typescript/index.html
@@ -140,10 +140,10 @@ ghost.init({
     <div class="site-nav-left">
                 <a class="site-nav-logo" href="https://www.coisadeprogramador.com.br"><img src="../content/images/2018/09/logo_600.png" alt="Coisa de Programador"></a>
             <ul class="nav" role="menu">
-    <li class="nav-home" role="menuitem"><a href="http://www.coisadeprogramador.com.br/">Home</a></li>
+    <li class="nav-home" role="menuitem"><a href="https://www.coisadeprogramador.com.br/">Home</a></li>
     <li class="nav-sobre" role="menuitem"><a href="https://www.coisadeprogramador.com.br/sobre/">Sobre</a></li>
-    <li class="nav-projetos" role="menuitem"><a href="http://www.coisadeprogramador.com.br/meus-projetos">Projetos</a></li>
-    <li class="nav-contato" role="menuitem"><a href="http://www.coisadeprogramador.com.br/contato">Contato</a></li>
+    <li class="nav-projetos" role="menuitem"><a href="https://www.coisadeprogramador.com.br/meus-projetos">Projetos</a></li>
+    <li class="nav-contato" role="menuitem"><a href="https://www.coisadeprogramador.com.br/contato">Contato</a></li>
 </ul>
 
     </div>
@@ -188,8 +188,8 @@ ghost.init({
 <h2 id="prrequisitos">Pré-requisitos</h2>
 <p>Se você não está familiarizado com o mundo <em>NodeJs</em> veja:</p>
 <ul>
-<li><a href="http://www.coisadeprogramador.com.br/nodejs-primeiros-passos/">NodeJs - Primeiros passos</a></li>
-<li><a href="http://www.coisadeprogramador.com.br/gulp-automatize-facilmente-suas-tarefas/">Gulp - Automatizando tarefas</a></li>
+<li><a href="https://www.coisadeprogramador.com.br/nodejs-primeiros-passos/">NodeJs - Primeiros passos</a></li>
+<li><a href="https://www.coisadeprogramador.com.br/gulp-automatize-facilmente-suas-tarefas/">Gulp - Automatizando tarefas</a></li>
 </ul>
 <h2 id="vamosinstalar">Vamos instalar?</h2>
 <p>Primeiramente instale o <code>webpack</code> como módulo global e depois instale como uma dependência de desenvolvimento.</p>
