--- a/introducao-html-iniciantes/index.html
+++ b/introducao-html-iniciantes/index.html
@@ -139,10 +139,10 @@ ghost.init({
     <div class="site-nav-left">
                 <a class="site-nav-logo" href="https://www.coisadeprogramador.com.br"><img src="../content/images/2018/09/logo_600.png" alt="Coisa de Programador"></a>
             <ul class="nav" role="menu">
-    <li class="nav-home" role="menuitem"><a href="http://www.coisadeprogramador.com.br/">Home</a></li>
+    <li class="nav-home" role="menuitem"><a href="https://www.coisadeprogramador.com.br/">Home</a></li>
     <li class="nav-sobre" role="menuitem"><a href="https://www.coisadeprogramador.com.br/sobre/">Sobre</a></li>
-    <li class="nav-projetos" role="menuitem"><a href="http://www.coisadeprogramador.com.br/meus-projetos">Projetos</a></li>
-    <li class="nav-contato" role="menuitem"><a href="http://www.coisadeprogramador.com.br/contato">Contato</a></li>
+    <li class="nav-projetos" role="menuitem"><a href="https://www.coisadeprogramador.com.br/meus-projetos">Projetos</a></li>
+    <li class="nav-contato" role="menuitem"><a href="https://www.coisadeprogramador.com.br/contato">Contato</a></li>
 </ul>
 
     </div>
@@ -296,7 +296,7 @@ O processo de renderização segue a hierarquia de <em>tags</em>, esta estrutura
        &lt;img src="http://i.giphy.com/az3XlqP9zQ9ry.gif" /&gt;
     &lt;/p&gt;
     &lt;p&gt;
-       Visite &lt;a href="http://www.coisadeprogramador.com.br"&gt;Coisa de Programador&lt;/a&gt;
+       Visite &lt;a href="https://www.coisadeprogramador.com.br"&gt;Coisa de Programador&lt;/a&gt;
     &lt;/p&gt;
   &lt;/body&gt;
 &lt;/html&gt;
