--- a/nuget-package-reference-packages-config/index.html
+++ b/nuget-package-reference-packages-config/index.html
@@ -139,10 +139,10 @@ ghost.init({
     <div class="site-nav-left">
                 <a class="site-nav-logo" href="https://www.coisadeprogramador.com.br"><img src="../content/images/2018/09/logo_600.png" alt="Coisa de Programador"></a>
             <ul class="nav" role="menu">
-    <li class="nav-home" role="menuitem"><a href="http://www.coisadeprogramador.com.br/">Home</a></li>
+    <li class="nav-home" role="menuitem"><a href="https://www.coisadeprogramador.com.br/">Home</a></li>
     <li class="nav-sobre" role="menuitem"><a href="https://www.coisadeprogramador.com.br/sobre/">Sobre</a></li>
-    <li class="nav-projetos" role="menuitem"><a href="http://www.coisadeprogramador.com.br/meus-projetos">Projetos</a></li>
-    <li class="nav-contato" role="menuitem"><a href="http://www.coisadeprogramador.com.br/contato">Contato</a></li>
+    <li class="nav-projetos" role="menuitem"><a href="https://www.coisadeprogramador.com.br/meus-projetos">Projetos</a></li>
+    <li class="nav-contato" role="menuitem"><a href="https://www.coisadeprogramador.com.br/contato">Contato</a></li>
 </ul>
 
     </div>
@@ -334,7 +334,7 @@ ghost.init({
                 <h2 class="post-card-title">Pontos importantes em uma entrevista para programadores</h2>
             </header>
             <section class="post-card-excerpt">
-                <p>Este artigo é um complemento desta publicação anterior: **[10 perguntas comuns em uma entrevista de programador](http://www.coisadeprogramador.com.br/10-perguntas-comuns-em-uma-entrevista-de-programador/)** Cloud e Micro-serviços Em 2008 participei de uma palestra da IBM</p>
+                <p>Este artigo é um complemento desta publicação anterior: **[10 perguntas comuns em uma entrevista de programador](https://www.coisadeprogramador.com.br/10-perguntas-comuns-em-uma-entrevista-de-programador/)** Cloud e Micro-serviços Em 2008 participei de uma palestra da IBM</p>
             </section>
         </a>
         <footer class="post-card-meta">
