--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@ ghost.init({
         <nav class="site-nav">
     <div class="site-nav-left">
             <ul class="nav" role="menu">
-    <li class="nav-home" role="menuitem"><a href="http://www.coisadeprogramador.com.br/">Home</a></li>
+    <li class="nav-home" role="menuitem"><a href="https://www.coisadeprogramador.com.br/">Home</a></li>
     <li class="nav-sobre" role="menuitem"><a href="https://www.coisadeprogramador.com.br/sobre/">Sobre</a></li>
-    <li class="nav-projetos" role="menuitem"><a href="http://www.coisadeprogramador.com.br/meus-projetos">Projetos</a></li>
-    <li class="nav-contato" role="menuitem"><a href="http://www.coisadeprogramador.com.br/contato">Contato</a></li>
+    <li class="nav-projetos" role="menuitem"><a href="https://www.coisadeprogramador.com.br/meus-projetos">Projetos</a></li>
+    <li class="nav-contato" role="menuitem"><a href="https://www.coisadeprogramador.com.br/contato">Contato</a></li>
 </ul>
 
     </div>
@@ -289,7 +289,7 @@ ghost.init({
                 <h2 class="post-card-title">Pontos importantes em uma entrevista para programadores</h2>
             </header>
             <section class="post-card-excerpt">
-                <p>Este artigo é um complemento desta publicação anterior: **[10 perguntas comuns em uma entrevista de programador](http://www.coisadeprogramador.com.br/10-perguntas-comuns-em-uma-entrevista-de-programador/)** Cloud e Micro-serviços Em 2008 participei de uma palestra da IBM</p>
+                <p>Este artigo é um complemento desta publicação anterior: **[10 perguntas comuns em uma entrevista de programador](https://www.coisadeprogramador.com.br/10-perguntas-comuns-em-uma-entrevista-de-programador/)** Cloud e Micro-serviços Em 2008 participei de uma palestra da IBM</p>
             </section>
         </a>
         <footer class="post-card-meta">
