--- a/yeoman-facilitando-a-preparacao-do-ambiente-de-desenvolvimento/index.html
+++ b/yeoman-facilitando-a-preparacao-do-ambiente-de-desenvolvimento/index.html
@@ -139,10 +139,10 @@ ghost.init({
     <div class="site-nav-left">
                 <a class="site-nav-logo" href="https://www.coisadeprogramador.com.br"><img src="../content/images/2018/09/logo_600.png" alt="Coisa de Programador"></a>
             <ul class="nav" role="menu">
-    <li class="nav-home" role="menuitem"><a href="http://www.coisadeprogramador.com.br/">Home</a></li>
+    <li class="nav-home" role="menuitem"><a href="https://www.coisadeprogramador.com.br/">Home</a></li>
     <li class="nav-sobre" role="menuitem"><a href="https://www.coisadeprogramador.com.br/sobre/">Sobre</a></li>
-    <li class="nav-projetos" role="menuitem"><a href="http://www.coisadeprogramador.com.br/meus-projetos">Projetos</a></li>
-    <li class="nav-contato" role="menuitem"><a href="http://www.coisadeprogramador.com.br/contato">Contato</a></li>
+    <li class="nav-projetos" role="menuitem"><a href="https://www.coisadeprogramador.com.br/meus-projetos">Projetos</a></li>
+    <li class="nav-contato" role="menuitem"><a href="https://www.coisadeprogramador.com.br/contato">Contato</a></li>
 </ul>
 
     </div>
@@ -191,7 +191,7 @@ ghost.init({
 <li>Git</li>
 </ul>
 <p>Se você não está familiarizado com NodeJs veja uma breve introdução:</p>
-<p><a href="http://www.coisadeprogramador.com.br/nodejs-primeiros-passos/">NodeJs - Primeiros Passos</a></p>
+<p><a href="https://www.coisadeprogramador.com.br/nodejs-primeiros-passos/">NodeJs - Primeiros Passos</a></p>
 <h2 id="partiutrabalho">Partiu trabalho!</h2>
 <p><img src="../content/images/2015/08/wpoLqr5FT1sY0.gif" alt="Vamos trabalhar"></p>
 <p>Primeiramente vamos instalar o <strong>Yeoman</strong>, abra sua linha de comando e digite:</p>
@@ -320,7 +320,7 @@ ghost.init({
                 <h2 class="post-card-title">10 perguntas comuns em uma entrevista de programador</h2>
             </header>
             <section class="post-card-excerpt">
-                <p>Veja o complemento deste artigo: **[Pontos importantes em uma entrevista para programadores](http://www.coisadeprogramador.com.br/pontos-importantes-entrevista-programadores/)** Perguntas? Preparado para uma entrevista de emprego caro "programador". Segue uma breve lista</p>
+                <p>Veja o complemento deste artigo: **[Pontos importantes em uma entrevista para programadores](https://www.coisadeprogramador.com.br/pontos-importantes-entrevista-programadores/)** Perguntas? Preparado para uma entrevista de emprego caro "programador". Segue uma breve lista</p>
             </section>
         </a>
         <footer class="post-card-meta">
