--- a/meus-projetos/index.html
+++ b/meus-projetos/index.html
@@ -185,7 +185,7 @@ ghost.init({
 
                     
 <section class="author-card">
-        <img class="author-profile-image" src="http://www.gravatar.com/avatar/7a92dc571d7a08bd4f06593757e472b4?s=250&amp;d=mm&amp;r=x" alt="William Sena">
+        <img class="author-profile-image" src="https://www.gravatar.com/avatar/7a92dc571d7a08bd4f06593757e472b4?s=250&amp;d=mm&amp;r=x" alt="William Sena">
     <section class="author-card-content">
         <h4 class="author-card-name"><a href="../author/william/">William Sena</a></h4>
             <p>Read <a href="../author/william/">more posts</a> by this author.</p>
@@ -255,7 +255,7 @@ ghost.init({
                         William Sena
                     </div>
 
-                        <a href="../author/william/" class="static-avatar"><img class="author-profile-image" src="http://www.gravatar.com/avatar/7a92dc571d7a08bd4f06593757e472b4?s=250&amp;d=mm&amp;r=x" alt="William Sena"></a>
+                        <a href="../author/william/" class="static-avatar"><img class="author-profile-image" src="https://www.gravatar.com/avatar/7a92dc571d7a08bd4f06593757e472b4?s=250&amp;d=mm&amp;r=x" alt="William Sena"></a>
                 </li>
             </ul>
 
